[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/Towers/TOWER_SENTRY_V2_TURRET1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Towers/TOWER_SENTRY_V2_TURRET2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Towers/TOWER_SENTRY_V2_BASE1.png" type="Texture" id=3]
[ext_resource path="res://Towers/Towers.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Fire",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 43, 43 )

[sub_resource type="CircleShape2D" id=4]
radius = 136.0

[node name="Tower" type="Area2D"]
script = ExtResource( 4 )

[node name="Tower Base" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "New Anim"

[node name="Tower Turret" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Fire"
frame = 1
centered = false
offset = Vector2( -17, -42.0391 )

[node name="Projectile Spawn Location" type="Node2D" parent="Tower Turret"]
position = Vector2( 6.64413e-06, -38 )

[node name="Tower Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Fire" type="Timer" parent="."]

[node name="Tower Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower Range"]
shape = SubResource( 4 )

[connection signal="timeout" from="Fire" to="." method="_on_Fire_timeout"]
[connection signal="area_entered" from="Tower Range" to="." method="_on_Tower_Range_area_entered"]
[connection signal="area_exited" from="Tower Range" to="." method="_on_Tower_Range_area_exited"]
